# HyperwormEX

./: .gitignore  CMakeLists.txt  GAME_README.md  README.md
design/: IDEAS.md  TRICKS.md
include/: flags.h  game.h  level.h  menu.h  palettes.h  player.h  sound_atlas.h  sprite_atlas.h  textures.h  tunnel.h  upgrades.h  wormhole.h
include/enemies/: basic.h
include/engine/: aabb.h  actor.h  audio.h  camera.h  collision.h  const.h  font.h  geometry.h  keys.h  light.h  logging.h  lut.h  perlin.h  platform.h  render.h  sprite.h  text.h  utils.h  vec3.h  world.h
include/objects/: grenade.h
include/sounds/: sfx.h  songs.h
include/sprites/: sprites.h
music/: arp.json  bass.json  growl.json  hat.json  kick.json  lead.json  snare.json  song.json
promo/: cover.aseprite  icon.aseprite  title.aseprite
src/: game.c  game_end.c  game_lose.c  game_new.c  menu.c  palettes.c  sound_atlas.c  sprite_atlas.c  textures.c  tunnel.c  upgrades.c  wormhole_actor.c  wormhole_state.c
src/enemies/: basic.c
src/engine/: aabb.c  actor_core.c  actor_physics.c  audio.c  camera.c  collision.c  geometry.c  light.c  lut.c  perlin.c  render_core.c  render_draw.c  sprite.c  text.c  utils.c  vec3.c  world.c
src/engine/platform/generic/: platform_raylib_desktop.c
src/engine/platform/linux/: platform_audio_alsa.c  platform_posix.c  platform_x11.c
src/engine/platform/other/: platform_null.c  platform_null_audio.c  platform_null_render.c  platform_null_thread.c
src/engine/platform/windows/: platform_audio_winmm.c
src/level/: bsp.c  gen.c  level.c  spawn.c
src/objects/: grenade.c
src/player/: hud.c  player.c  stats.c  weapons.c
tools/: autovndh.py  export_game.sh  launcher.sh
tools/alsa/: alsa_bruteforce.c
tools/font/: build_font.go
tools/sprites/: pack_2bit.go
